cmake_minimum_required(VERSION 3.26)
project(functional_programming_exercises)

set(CMAKE_CXX_STANDARD 20)

add_executable(exercise01 exercise1.cpp world-util.cpp world-util.h country.cpp country.h city.cpp city.h)
add_executable(exercise02 exercise2.cpp world-util.cpp world-util.h country.cpp country.h city.cpp city.h)
add_executable(exercise03 exercise3.cpp world-util.cpp world-util.h country.cpp country.h city.cpp city.h)
add_executable(exercise04 exercise4.cpp world-util.cpp world-util.h country.cpp country.h city.cpp city.h)
add_executable(exercise05 exercise5.cpp world-util.cpp world-util.h country.cpp country.h city.cpp city.h)
add_executable(exercise06 exercise6.cpp world-util.cpp world-util.h country.cpp country.h city.cpp city.h)
add_executable(exercise07 exercise7.cpp world-util.cpp world-util.h country.cpp country.h city.cpp city.h)
add_executable(exercise08 exercise8.cpp world-util.cpp world-util.h country.cpp country.h city.cpp city.h)
